--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
   "author": "Daiwei Lu <daiweilu123@gmail.com> (http://daiwei.lu)",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-core": "^5.2.0",
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
+    "babel-runtime": "^5.5.6",
+    "css-loader": "^0.14.5",
+    "extract-text-webpack-plugin": "^0.8.1",
     "node-libs-browser": "^0.5.2",
+    "node-sass": "^3.1.2",
+    "postcss-loader": "^0.4.4",
+    "postcss-local-scope": "0.0.5",
     "react": "^0.13.3",
+    "sass-loader": "^1.0.2",
+    "style-loader": "^0.12.3",
     "webpack": "^1.9.10"
   },
   "scripts": {
-    "build": "rm -r public && webpack && cp src/index.html public"
+    "build": "rm -rf public && webpack && cp src/index.html public"
   }
 }
